Correct environment variable name

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -60,7 +60,7 @@ jobs:
         run: |
           wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh;
           chmod +x ~/miniconda.sh && ~/miniconda.sh -b;
-          echo 'export PATH="$HOME/miniconda3/bin:$PATH"'  >> $BASH_ENV;
+          echo 'export PATH="$HOME/miniconda3/bin:$PATH"'  >> $GITHUB_ENV;
       - name: Install apt packages
         run: |
           ./build_tools/github/build_dependencies_apt.sh
