--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -1,6 +1,3 @@
-# Workflow to build the documentation
-name: Documentation builder
-
 on:
   push:
     branches:
@@ -23,11 +20,14 @@ jobs:
         uses: actions/cache@v3
         with:
           path: .git
-          key: source-cache-v3
+          key: source-cache-${{ runner.os }}-${{ github.run_id }}
+          restore-keys: |
+            source-cache-${{ runner.os }}
       - name: Checkout nilearn
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 0
       - name: Complete checkout
         run: |
           if ! git remote -v | grep upstream; then
@@ -38,7 +38,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: .git
-          key: source-cache-v3
+          key: source-cache-${{ runner.os }}-${{ github.run_id }}
       - name: Merge with upstream
         run: |
           echo $(git log -1 --pretty=%B) | tee gitlog.txt
@@ -60,14 +60,17 @@ jobs:
             echo "true" | tee restore.txt;
           fi
       - name: Setup conda
-        run: |
-          wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh;
-          chmod +x ~/miniconda.sh && ~/miniconda.sh -b;
-          echo 'export PATH="$HOME/miniconda3/bin:$PATH"'  >> $GITHUB_ENV;
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-activate-base: true
+          activate-environment: ""
+          miniconda-version: "latest"
+          channels: conda-forge,defaults
       - name: Install apt packages
         run: |
           ./build_tools/github/build_dependencies_apt.sh
       - name: Install packages in conda env
+        shell: bash -el {0}
         run: |
           ./build_tools/github/build_dependencies.sh
       - name: Find build type
@@ -78,6 +81,7 @@ jobs:
           echo "PATTERN = $(cat pattern.txt)"
           echo "BUILD = $(cat build.txt)"
       - name: Build docs
+        shell: bash -el {0}
         run: |
           source activate testenv;
           echo "Conda active env = $CONDA_DEFAULT_ENV";
