--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -7,14 +7,168 @@ on:
       - "main"
   pull_request:
     branches:
-      - '*'
+      - "*"
+  schedule:
+    - cron: "0 6 * * *"
 
 jobs:
+  restore_data:
+    # This prevents this workflow from running on a fork.
+    # To test this workflow on a fork, uncomment the following line.
+    if: github.repository == 'nilearn/nilearn'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout nilearn
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+      - name: Determine force download
+        run: |
+          commit_msg=$(git log -2 --format=oneline);
+          echo $commit_msg;
+          if [[ $commit_msg == *"[force download]"* ]]; then
+            echo "All datasets will be downloaded as requested.";
+            touch restore.txt;
+          else
+            echo "Data cache will be used if available.";
+            echo "true" | tee restore.txt;
+          fi
+      - name: Get cache key
+        run: |
+          if [[ $(cat restore.txt) == "true" ]]; then
+              date +%U > week_num;
+          else
+              echo "missing" > week_num;
+          fi
+      - name: Restore data cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/basc_multiscale_2015 # <  1 MB
+            ~/nilearn_data/destrieux_surface    # <  1 MB
+            ~/nilearn_data/difumo_atlases       # ~  4 MB
+            ~/nilearn_data/fsaverage            # ~ 28 MB
+            ~/nilearn_data/Megatrawls           # ~  9 MB
+            ~/nilearn_data/msdl_atlas           # ~ 21 MB
+            ~/nilearn_data/neurovault           # ~ 13 MB
+            ~/nilearn_data/pauli_2017           # ~  1 MB
+            ~/nilearn_data/yeo_2011             # ~  3 MB
+          key: v1-small-cache-${{ hashFiles('**/week_num**') }}
+      - name: Restore data cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/adhd                 # ~ 45 MB
+          key: v1-adhd-${{ hashFiles('**/week_num**') }}
+      - name: Restore data cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/allen_rsn_2011       # ~ 32 MB
+          key: v1-allen_rsn_2011-${{ hashFiles('**/week_num**') }}
+      - name: Restore data cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/brainomics_localizer # ~ 66 MB
+          key: v1-brainomics_localizer-${{ hashFiles('**/week_num**') }}
+      - name: Restore data cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/development_fmri     # ~373 MB
+          key: v1-development_fmri-${{ hashFiles('**/week_num**') }}
+      - name: Restore data cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/ds000030             # ~832 MB
+          key: v1-ds000030-${{ hashFiles('**/week_num**') }}
+      - name: Restore data cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/fiac_nilearn.glm     # ~ 82 MB
+          key: v1-fiac_nilearn.glm-${{ hashFiles('**/week_num**') }}
+      - name: Restore data cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/fMRI-language-localizer-demo-dataset # ~ 750 MB
+          key: v1-fMRI-language-localizer-demo-dataset-${{ hashFiles('**/week_num**') }}
+      - name: Restore data cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/fsl                  # ~ 30 MB
+          key: v1-fsl-${{ hashFiles('**/week_num**') }}
+      - name: Restore data cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/haxby2001            # ~302 MB
+          key: v1-haxby2001-${{ hashFiles('**/week_num**') }}
+      - name: Restore data cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/icbm152_2009         # ~ 63 MB
+          key: v1-icbm152_2009-${{ hashFiles('**/week_num**') }}
+      - name: Restore data cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/jimura_poldrack_2012_zmaps # ~ 105 MB
+          key: v1-jimura_poldrack_2012_zmaps-${{ hashFiles('**/week_num**') }}
+      - name: Restore data cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/localizer_first_level # ~ 35 MB
+          key: v1-localizer_first_level-${{ hashFiles('**/week_num**') }}
+      - name: Restore data cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/miyawaki2008          # ~181 MB
+          key: v1-miyawaki2008-${{ hashFiles('**/week_num**') }}
+      - name: Restore data cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/nki_enhanced_surface  # ~ 85 MB
+          key: v1-nki_enhanced_surface-${{ hashFiles('**/week_num**') }}
+      - name: Restore data cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/oasis1                # ~913 MB
+          key: v1-oasis1-${{ hashFiles('**/week_num**') }}
+      - name: Restore data cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/smith_2009            # ~171 MB
+          key: v1-smith_2009-${{ hashFiles('**/week_num**') }}
+      - name: Restore data cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/spm_auditory          # ~230 MB
+          key: v1-spm_auditory-${{ hashFiles('**/week_num**') }}
+      - name: Restore data cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/spm_multimodal_fmri   # ~227 MB
+          key: v1-spm_multimodal_fmri-${{ hashFiles('**/week_num**') }}
+
   build_docs:
     # This prevents this workflow from running on a fork.
     # To test this workflow on a fork, uncomment the following line.
     if: github.repository == 'nilearn/nilearn'
     runs-on: ubuntu-latest
+    needs: restore_data
     defaults:
       run:
         shell: bash
@@ -34,7 +188,7 @@ jobs:
       - name: Complete checkout
         run: |
           if ! git remote -v | grep upstream; then
-            git remote add upstream https://github.com/nilearn/nilearn.git
+            git remote add upstream https://github.com/ymzayek/nilearn.git
           fi
           git fetch upstream
       - name: Save source cache
@@ -51,23 +205,12 @@ jobs:
               echo "Merging $(cat merge.txt)";
               git pull --ff-only upstream "refs/pull/$(cat merge.txt)";
           fi
-      - name: Determine force download
-        run: |
-          commit_msg=$(git log -2 --format=oneline);
-          echo $commit_msg;
-          if [[ $commit_msg == *"[force download]"* ]]; then
-            echo "All datasets will be downloaded as requested.";
-            touch restore.txt;
-          else
-            echo "Data cache will be used if available.";
-            echo "true" | tee restore.txt;
-          fi
       - name: Setup conda
         uses: conda-incubator/setup-miniconda@v2
         with:
           auto-activate-base: true
-          activate-environment: ""
-          miniconda-version: "latest"
+          activate-environment: ''
+          miniconda-version: 'latest'
           channels: conda-forge,defaults
       - name: Install apt packages
         run: |
@@ -96,3 +239,148 @@ jobs:
         with:
           name: doc
           path: doc/_build/html
+
+      - name: Generate cache keys
+        run: |
+          date +%U > week_num;
+      - name: Save data cache
+        if: steps.restore-cache.outputs.cache-hit != 'true'
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/basc_multiscale_2015 # <  1 MB
+            ~/nilearn_data/destrieux_surface    # <  1 MB
+            ~/nilearn_data/difumo_atlases       # ~  4 MB
+            ~/nilearn_data/fsaverage            # ~ 28 MB
+            ~/nilearn_data/Megatrawls           # ~  9 MB
+            ~/nilearn_data/msdl_atlas           # ~ 21 MB
+            ~/nilearn_data/neurovault           # ~ 13 MB
+            ~/nilearn_data/pauli_2017           # ~  1 MB
+            ~/nilearn_data/yeo_2011             # ~  3 MB
+          key: v1-small-cache-${{ hashFiles('**/week_num**') }}
+      - name: Save data cache
+        if: steps.restore-cache.outputs.cache-hit != 'true'
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/adhd                 # ~ 45 MB
+          key: v1-adhd-${{ hashFiles('**/week_num**') }}
+      - name: Save data cache
+        if: steps.restore-cache.outputs.cache-hit != 'true'
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/allen_rsn_2011       # ~ 32 MB
+          key: v1-allen_rsn_2011-${{ hashFiles('**/week_num**') }}
+      - name: Save data cache
+        if: steps.restore-cache.outputs.cache-hit != 'true'
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/brainomics_localizer # ~ 66 MB
+          key: v1-brainomics_localizer-${{ hashFiles('**/week_num**') }}
+      - name: Save data cache
+        if: steps.restore-cache.outputs.cache-hit != 'true'
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/development_fmri     # ~373 MB
+          key: v1-development_fmri-${{ hashFiles('**/week_num**') }}
+      - name: Save data cache
+        if: steps.restore-cache.outputs.cache-hit != 'true'
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/ds000030             # ~832 MB
+          key: v1-ds000030-${{ hashFiles('**/week_num**') }}
+      - name: Save data cache
+        if: steps.restore-cache.outputs.cache-hit != 'true'
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/fiac_nilearn.glm     # ~ 82 MB
+          key: v1-fiac_nilearn.glm-${{ hashFiles('**/week_num**') }}
+      - name: Save data cache
+        if: steps.restore-cache.outputs.cache-hit != 'true'
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/fMRI-language-localizer-demo-dataset # ~ 750 MB
+          key: v1-fMRI-language-localizer-demo-dataset-${{ hashFiles('**/week_num**') }}
+      - name: Save data cache
+        if: steps.restore-cache.outputs.cache-hit != 'true'
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/fsl                  # ~ 30 MB
+          key: v1-fsl-${{ hashFiles('**/week_num**') }}
+      - name: Save data cache
+        if: steps.restore-cache.outputs.cache-hit != 'true'
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/haxby2001            # ~302 MB
+          key: v1-haxby2001-${{ hashFiles('**/week_num**') }}
+      - name: Save data cache
+        if: steps.restore-cache.outputs.cache-hit != 'true'
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/icbm152_2009         # ~ 63 MB
+          key: v1-icbm152_2009-${{ hashFiles('**/week_num**') }}
+      - name: Save data cache
+        if: steps.restore-cache.outputs.cache-hit != 'true'
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/jimura_poldrack_2012_zmaps # ~ 105 MB
+          key: v1-jimura_poldrack_2012_zmaps-${{ hashFiles('**/week_num**') }}
+      - name: Save data cache
+        if: steps.restore-cache.outputs.cache-hit != 'true'
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/localizer_first_level # ~ 35 MB
+          key: v1-localizer_first_level-${{ hashFiles('**/week_num**') }}
+      - name: Save data cache
+        if: steps.restore-cache.outputs.cache-hit != 'true'
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/miyawaki2008          # ~181 MB
+          key: v1-miyawaki2008-${{ hashFiles('**/week_num**') }}
+      - name: Save data cache
+        if: steps.restore-cache.outputs.cache-hit != 'true'
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/nki_enhanced_surface  # ~ 85 MB
+          key: v1-nki_enhanced_surface-${{ hashFiles('**/week_num**') }}
+      - name: Save data cache
+        if: steps.restore-cache.outputs.cache-hit != 'true'
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/oasis1                # ~913 MB
+          key: v1-oasis1-${{ hashFiles('**/week_num**') }}
+      - name: Save data cache
+        if: steps.restore-cache.outputs.cache-hit != 'true'
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/smith_2009            # ~171 MB
+          key: v1-smith_2009-${{ hashFiles('**/week_num**') }}
+      - name: Save data cache
+        if: steps.restore-cache.outputs.cache-hit != 'true'
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/spm_auditory          # ~230 MB
+          key: v1-spm_auditory-${{ hashFiles('**/week_num**') }}
+      - name: Save data cache
+        if: steps.restore-cache.outputs.cache-hit != 'true'
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/nilearn_data/spm_multimodal_fmri   # ~227 MB
+          key: v1-spm_multimodal_fmri-${{ hashFiles('**/week_num**') }}
