--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -90,125 +90,152 @@ jobs:
 
       - name: Data caching
         uses: actions/cache@v3
+        # <  1 MB
+        # <  1 MB
+        # ~  4 MB
+        # ~ 28 MB
+        # ~  9 MB
+        # ~ 21 MB
+        # ~ 13 MB
+        # ~  1 MB
+        # ~  3 MB
         with:
           path: |
-           $NILEARN_DATA/basc_multiscale_2015  # <  1 MB
-           $NILEARN_DATA/destrieux_surface     # <  1 MB
-           $NILEARN_DATA/difumo_atlases        # ~  4 MB
-           $NILEARN_DATA/fsaverage             # ~ 28 MB
-           $NILEARN_DATA/Megatrawls            # ~  9 MB
-           $NILEARN_DATA/msdl_atlas            # ~ 21 MB
-           $NILEARN_DATA/neurovault            # ~ 13 MB
-           $NILEARN_DATA/pauli_2017            # ~  1 MB
-           $NILEARN_DATA/yeo_2011              # ~  3 MB
+           nilearn_data/basc_multiscale_2015
+           nilearn_data/destrieux_surface
+           nilearn_data/difumo_atlases
+           nilearn_data/fsaverage
+           nilearn_data/Megatrawls
+           nilearn_data/msdl_atlas
+           nilearn_data/neurovault
+           nilearn_data/pauli_2017
+           nilearn_data/yeo_2011
           key: v1-small-cache-${{ hashFiles('**/week_num**') }}
       - name: Data caching
         uses: actions/cache@v3
+        # ~ 45 MB
         with:
           path: |
-           $NILEARN_DATA/adhd                 # ~ 45 MB
+           nilearn_data/adhd
           key: v1-adhd-${{ hashFiles('**/week_num**') }}
       - name: Data caching
         uses: actions/cache@v3
+        # ~ 32 MB
         with:
           path: |
-           $NILEARN_DATA/allen_rsn_2011        # ~ 32 MB
+           nilearn_data/allen_rsn_2011
           key: v1-allen_rsn_2011-${{ hashFiles('**/week_num**') }}
       - name: Data caching
         uses: actions/cache@v3
+        # ~ 66 MB
         with:
           path: |
-           $NILEARN_DATA/brainomics_localizer  # ~ 66 MB
+           nilearn_data/brainomics_localizer
           key: v1-brainomics_localizer-${{ hashFiles('**/week_num**') }}
       - name: Data caching
         uses: actions/cache@v3
+        # ~373 MB
         with:
           path: |
-           $NILEARN_DATA/development_fmri      # ~373 MB
+           nilearn_data/development_fmri
           key: v1-development_fmri-${{ hashFiles('**/week_num**') }}
       - name: Data caching
         uses: actions/cache@v3
+        # ~832 MB
         with:
           path: |
-           $NILEARN_DATA/ds000030              # ~832 MB
+           nilearn_data/ds000030
           key: v1-ds000030-${{ hashFiles('**/week_num**') }}
       - name: Data caching
         uses: actions/cache@v3
+        # ~ 82 MB
         with:
           path: |
-           $NILEARN_DATA/fiac_nilearn.glm      # ~ 82 MB
+           nilearn_data/fiac_nilearn.glm
           key: v1-fiac_nilearn.glm-${{ hashFiles('**/week_num**') }}
       - name: Data caching
         uses: actions/cache@v3
+        # ~ 750 MB
         with:
           path: |
-           $NILEARN_DATA/fMRI-language-localizer-demo-dataset # ~ 750 MB
+           nilearn_data/fMRI-language-localizer-demo-dataset
           key: v1-fMRI-language-localizer-demo-dataset-${{ hashFiles('**/week_num**') }}
       - name: Data caching
         uses: actions/cache@v3
+        # ~ 30 MB
         with:
           path: |
-           $NILEARN_DATA/fsl                   # ~ 30 MB
+           nilearn_data/fsl
           key: v1-fsl-${{ hashFiles('**/week_num**') }}
       - name: Data caching
         uses: actions/cache@v3
+        # ~302 MB
         with:
           path: |
-           $NILEARN_DATA/haxby2001             # ~302 MB
+           nilearn_data/haxby2001
           key: v1-haxby2001-${{ hashFiles('**/week_num**') }}
       - name: Data caching
         uses: actions/cache@v3
+        # ~ 63 MB
         with:
           path: |
-           $NILEARN_DATA/icbm152_2009          # ~ 63 MB
+           nilearn_data/icbm152_2009
           key: v1-icbm152_2009-${{ hashFiles('**/week_num**') }}
       - name: Data caching
         uses: actions/cache@v3
+        # ~ 105 MB
         with:
           path: |
-           $NILEARN_DATA/jimura_poldrack_2012_zmaps # ~ 105 MB
+           nilearn_data/jimura_poldrack_2012_zmaps
           key: v1-jimura_poldrack_2012_zmaps-${{ hashFiles('**/week_num**') }}
       - name: Data caching
         uses: actions/cache@v3
+        # ~ 35 MB
         with:
           path: |
-           $NILEARN_DATA/localizer_first_level # ~ 35 MB
+           nilearn_data/localizer_first_level
           key: v1-localizer_first_level-${{ hashFiles('**/week_num**') }}
       - name: Data caching
         uses: actions/cache@v3
+        # ~181 MB
         with:
           path: |
-           $NILEARN_DATA/miyawaki2008          # ~181 MB
+           nilearn_data/miyawaki2008
           key: v1-miyawaki2008-${{ hashFiles('**/week_num**') }}
       - name: Data caching
         uses: actions/cache@v3
+        # ~ 85 MB
         with:
           path: |
-           $NILEARN_DATA/nki_enhanced_surface  # ~ 85 MB
+           nilearn_data/nki_enhanced_surface
           key: v1-nki_enhanced_surface-${{ hashFiles('**/week_num**') }}
       - name: Data caching
         uses: actions/cache@v3
+        # ~913 MB
         with:
           path: |
-           $NILEARN_DATA/oasis1                # ~913 MB
+           nilearn_data/oasis1
           key: v1-oasis1-${{ hashFiles('**/week_num**') }}
       - name: Data caching
         uses: actions/cache@v3
+        # ~171 MB
         with:
           path: |
-           $NILEARN_DATA/smith_2009            # ~171 MB
+           nilearn_data/smith_2009
           key: v1-smith_2009-${{ hashFiles('**/week_num**') }}
       - name: Data caching
         uses: actions/cache@v3
+        # ~230 MB
         with:
           path: |
-           $NILEARN_DATA/spm_auditory          # ~230 MB
+           nilearn_data/spm_auditory
           key: v1-spm_auditory-${{ hashFiles('**/week_num**') }}
       - name: Data caching
         uses: actions/cache@v3
+        # ~227 MB
         with:
           path: |
-           $NILEARN_DATA/spm_multimodal_fmri   # ~227 MB
+           nilearn_data/spm_multimodal_fmri
           key: v1-spm_multimodal_fmri-${{ hashFiles('**/week_num**') }}
 
       # Download data and cache if it is not restored in previous steps, then
@@ -219,6 +246,7 @@ jobs:
           source activate testenv
           echo "Conda active env = $CONDA_DEFAULT_ENV";
           ./build_tools/github/download_data.sh
+      # TODO: Remove step before merge
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
         with:
