Comment out ssh setup

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -246,11 +246,11 @@ jobs:
           source activate testenv
           echo "Conda active env = $CONDA_DEFAULT_ENV";
           ./build_tools/github/download_data.sh
-      # TODO: Remove step before merge
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
-        with:
-          limit-access-to-actor: true
+#      # TODO: Remove step before merge
+#      - name: Setup tmate session
+#        uses: mxschmitt/action-tmate@v3
+#        with:
+#          limit-access-to-actor: true
       - name: Find build type
         run: |
           ./build_tools/github/build_type.sh
