--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -233,6 +233,11 @@ jobs:
 
       # Download data and cache if it is not restored in previous steps, then
       # run doc build
+      # TODO: Remove step before merge
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+        with:
+          limit-access-to-actor: true
       - name: Fetch and download nilearn data
         id: download_data
         run: |
@@ -256,11 +261,6 @@ jobs:
           cd doc;
           set -o pipefail;
           PATTERN=$(cat ../pattern.txt) make $(cat ../build.txt) 2>&1 | tee log.txt;
-#      # TODO: Remove step before merge
-#      - name: Setup tmate session
-#        uses: mxschmitt/action-tmate@v3
-#        with:
-#          limit-access-to-actor: true
       - name: Upload documentation
         uses: actions/upload-artifact@v3
         with:
