--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,6 @@
-# Documentation is now built using Github Actions.
-# CircleCI is only used to download the artifacts and deploy them.
+# Documentation is built using Github Actions.
+# CircleCI is only used to download the artifacts in order to host
+# and deploy them.
 
 version: 2.1
 
@@ -15,7 +16,7 @@ jobs:
     machine:
       image: ubuntu-2004:202111-01
     environment:
-        GITHUB_ARTIFACT_URL: << pipeline.parameters.GITHUB_RUN_URL >>/doc.zip
+      GITHUB_ARTIFACT_URL: << pipeline.parameters.GITHUB_RUN_URL >>/doc.zip
     steps:
       - checkout
       - run: bash build_tools/circle/download_documentation.sh
